refactored edit buttons

--- a/views/resort/singleResort.hbs
+++ b/views/resort/singleResort.hbs
@@ -38,7 +38,7 @@
 
         <div class="trip-link">
             <a href="/resort/{{singleResort._id}}/edit">
-                <button class="btn btn-info">Edit</button>
+                <button class="btn btn-info">Edit Resort</button>
             </a>
         </div>
 
