--- a/views/trip/singleTrip.hbs
+++ b/views/trip/singleTrip.hbs
@@ -29,7 +29,7 @@
                 <button class="btn btn-info">Add a Ski Resort</button>
             </a>
             <a href="/trip/{{singleTrip._id}}/edit">
-                <button class="btn btn-info">Edit</button>
+                <button class="btn btn-info">Edit Trip</button>
             </a>
         </div>
 
