--- a/views/user/singleUser.hbs
+++ b/views/user/singleUser.hbs
@@ -27,7 +27,7 @@
                 <button class="btn btn-info">Create a New Trip</button>
             </a>
             <a href="/user/{{singleUser._id}}/edit">
-                <button class="btn btn-info">Edit</button>
+                <button class="btn btn-info">Edit User</button>
             </a>
         </div>
 
