added all trips and link in nav bar

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,12 +20,14 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="/">Home</a>
                 <a class="nav-item nav-link" href="/user">Users</a>
+                <a class="nav-item nav-link" href="/trip">Trips</a>
             </div>
         </div>
     </nav>
     {{{body}}}
 
     <script src="/javascript/index.js"></script>
+    <script src="/javascript/handlebarsHelpers.js"></script>
 </body>
 
 </html>
