added bio to user

--- a/views/user/editUser.hbs
+++ b/views/user/editUser.hbs
@@ -16,6 +16,7 @@
             <option value="Ski">Ski</option>
             <option value="Snowboard">Snowboard</option>
         </select>
+        <textarea class="form-control" rows="3" name="bio" placeholder="Write a short bio about yourself..."></textarea>
         <input type="submit" value="Save" class="btn btn-info form-control" />
     </form>
 </div>
