--- a/views/user/singleUser.hbs
+++ b/views/user/singleUser.hbs
@@ -4,7 +4,7 @@
     <div class="jumbotron">
         <div class="card-body">
             <h5 class="display-4">{{singleUser.name}}</h5>
-            <p class="lead">Bio lorem ipsum</p>
+            <p class="lead">{{singleUser.bio}}</p>
             <p>Experience: {{singleUser.skillLevel}}</p>
             <p>Activity: {{singleUser.skiOrSnowboard}}</p>
         </div>
