--- a/views/user/createUser.hbs
+++ b/views/user/createUser.hbs
@@ -20,6 +20,8 @@
                 <option value="Ski">Ski</option>
                 <option value="Snowboard">Snowboard</option>
             </select>
+            <textarea class="form-control" rows="3" name="bio"
+                placeholder="Write a short bio about yourself..."></textarea>
             <input type="submit" value="Start Planning" class="btn btn-info form-control" />
         </form>
     </div>
