--- a/views/resort/singleResort.hbs
+++ b/views/resort/singleResort.hbs
@@ -5,7 +5,7 @@
         <div class="card-body">
             <h5 class="display-4">{{singleResort.name}}</h5>
 
-            <p class="lead">Notes lorem ipsum {{singleResort.notes}}</p>
+            <p class="lead">{{singleResort.notes}}</p>
 
         </div>
         <ul class="list-group list-group-flush">
