added validation fields to create user page

--- a/views/trip/createTrip.hbs
+++ b/views/trip/createTrip.hbs
@@ -19,6 +19,12 @@
                     <option value="Canada">Canada</option>
                     <option value="United States of America">United States of America</option>
                 </select>
+                <div class="invalid-feedback">
+                    Please select a country.
+                </div>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
             </div>
         </div>
         <div class="form-row">
