--- a/views/trip/singleTrip.hbs
+++ b/views/trip/singleTrip.hbs
@@ -38,5 +38,7 @@
         <form action="/trip/{{singleTrip._id}}?_method=DELETE" method="POST">
             <button class="btn btn-danger">Delete</button>
         </form>
+
+        <a class="back-btn" href="/trip/user/{{user._id}}"> &#60;&#60; Go Back to All Trips by {{user.name}}</a>
     </div>
 </div>
