removed back button

--- a/views/resort/createResort.hbs
+++ b/views/resort/createResort.hbs
@@ -1,4 +1,4 @@
-<div class="header">Create Resort</div>
+<div class="header">Add a Resort to {{singleTrip.name}}</div>
 
 <div class="create-resort-wrapper">
     <form class="needs-validation" novalidate method="POST" action="/resort">
