--- a/views/trip/createTrip.hbs
+++ b/views/trip/createTrip.hbs
@@ -1,4 +1,4 @@
-<div class="header">Create Trip</div>
+<div class="header">Add a New Trip</div>
 
 <div class="create-trip-form">
     <form class="needs-validation" novalidate method="POST" action="/trip">
