--- a/views/trip/allTrips.hbs
+++ b/views/trip/allTrips.hbs
@@ -12,7 +12,7 @@
 
             <p class="card-text">Airport: {{airport}}</p>
 
-            <p class="card-text">Dates: {{startDate}} - {{endDate}}</p>
+            <p class="card-text">Dates: {{startDate}} to {{endDate}}</p>
 
             <p class="card-text">Days Skiing: {{daysSkiing}}</p>
 
