--- a/views/trip/singleTrip.hbs
+++ b/views/trip/singleTrip.hbs
@@ -8,7 +8,7 @@
             <p><span class="created-by">Created by <a href="/user/{{user._id}}">{{user.name}}</a></span> </p>
             <p class="lead">{{singleTrip.city}}, {{singleTrip.state}}, {{singleTrip.country}}</p>
             <p>Airport: {{singleTrip.airport}}</p>
-            <p>Dates: {{singleTrip.startDate}} - {{singleTrip.endDate}}</p>
+            <p>Dates: {{singleTrip.startDate}} to {{singleTrip.endDate}}</p>
             <p>Days Skiing: {{singleTrip.daysSkiing}}</p>
             <p>{{singleTrip.notes}}</p>
         </div>
