--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,6 +21,7 @@
                 <a class="nav-item nav-link" href="/">Home</a>
                 <a class="nav-item nav-link" href="/user">Users</a>
                 <a class="nav-item nav-link" href="/trip">Trips</a>
+                <a class="nav-item nav-link" href="/about">About</a>
             </div>
         </div>
     </nav>
